--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 body {
   overflow-x: hidden;
-  touch-action: manipulation;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
 }
 
 .hero {
@@ -47,16 +48,23 @@ body {
   width: 300px;
   height: 5px;
   background-color: #1e3756;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: auto;
   margin-bottom: 40px;
   border-radius: 5px;
 }
 
 .rotated-image {
-  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
   margin-top: -50px;
 }
 
@@ -68,12 +76,16 @@ body {
   max-width: 270px;
   cursor: pointer;
   margin-bottom: 10px;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .card-layanan:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
   background-color: #2e74d0;
 }
 
@@ -106,12 +118,17 @@ body {
   max-width: 230px;
   margin-bottom: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
 }
 
 .harga-layanan:hover {
-  transform: translate(0, -10px);
+  -webkit-transform: translate(0, -10px);
+          transform: translate(0, -10px);
   background-color: transparent;
   background-color: #2e74d0;
 }
@@ -156,7 +173,8 @@ body {
   aspect-ratio: 1 / 1;
 }
 .void ul:hover * {
-  animation-play-state: paused;
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 .void ul {
   list-style-type: none;
@@ -171,16 +189,25 @@ body {
 .void li {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   /* 	outline: 2px dashed cyan; */
   width: 100%;
-  animation: rotateCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
+  -webkit-animation: rotateCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
+          animation: rotateCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
 .card2 {
   width: 27%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding: 16px 24px;
   gap: 8px;
   background: #ffffff;
@@ -192,7 +219,8 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #535062;
-  animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
+  -webkit-animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
+          animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
 }
 .void a {
   text-decoration: none;
@@ -214,47 +242,87 @@ svg {
 
 .void li:nth-child(2),
 .void li:nth-child(2) .card2 {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -1s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -1s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -1s);
 }
 .void li:nth-child(3),
 .void li:nth-child(3) .card2 {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -2s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -2s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -2s);
 }
 .void li:nth-child(4),
 .void li:nth-child(4) .card2 {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -3s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -3s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -3s);
 }
 .void li:nth-child(5),
 .void li:nth-child(5) .card2 {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -4s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -4s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -4s);
 }
 .void li:nth-child(6),
 .void li:nth-child(6) .card2 {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -5s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -5s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -5s);
 }
 .void li:nth-child(7),
 .void li:nth-child(7) .card2 {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -6s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -6s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -6s);
 }
 .void li:nth-child(8),
 .void li:nth-child(8) .card {
-  animation-delay: calc((var(--rotate-speed) / var(--count)) * -7s);
+  -webkit-animation-delay: calc((var(--rotate-speed) / var(--count)) * -7s);
+          animation-delay: calc((var(--rotate-speed) / var(--count)) * -7s);
+}
+
+@-webkit-keyframes rotateCW {
+  from {
+    -webkit-transform: translate3d(0px, -50%, -1px) rotate(-45deg);
+            transform: translate3d(0px, -50%, -1px) rotate(-45deg);
+  }
+  to {
+    -webkit-transform: translate3d(0px, -50%, 0px) rotate(-315deg);
+            transform: translate3d(0px, -50%, 0px) rotate(-315deg);
+  }
 }
 
 @keyframes rotateCW {
   from {
-    transform: translate3d(0px, -50%, -1px) rotate(-45deg);
+    -webkit-transform: translate3d(0px, -50%, -1px) rotate(-45deg);
+            transform: translate3d(0px, -50%, -1px) rotate(-45deg);
   }
   to {
-    transform: translate3d(0px, -50%, 0px) rotate(-315deg);
+    -webkit-transform: translate3d(0px, -50%, 0px) rotate(-315deg);
+            transform: translate3d(0px, -50%, 0px) rotate(-315deg);
+  }
+}
+@-webkit-keyframes rotateCCW {
+  from {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  to {
+    -webkit-transform: rotate(315deg);
+            transform: rotate(315deg);
   }
 }
 @keyframes rotateCCW {
   from {
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
   }
   to {
-    transform: rotate(315deg);
+    -webkit-transform: rotate(315deg);
+            transform: rotate(315deg);
+  }
+}
+@-webkit-keyframes pulseGlow {
+  from {
+    background-size: 60%;
+  }
+  to {
+    background-size: 100%;
   }
 }
 @keyframes pulseGlow {
@@ -272,7 +340,8 @@ svg {
   aspect-ratio: 1 / 1;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background: #ffffff;
   box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3),
     0px 30px 60px -12px rgba(12, 5, 46, 0.25);
@@ -284,9 +353,11 @@ svg {
   aspect-ratio: 1 / 1;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background: #f5f4fe;
   opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3),
     0px 30px 60px -12px rgba(12, 5, 46, 0.25);
   border-radius: 50%;
@@ -297,16 +368,18 @@ svg {
   aspect-ratio: 1 / 1;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background: #f5f4fe;
   opacity: 0.25;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
   box-shadow: 0px 18px 36px -18px rgba(12, 5, 46, 0.3),
     0px 30px 60px -12px rgba(12, 5, 46, 0.25);
   border-radius: 50%;
 }
 .crop {
-  -webkit-mask-image: linear-gradient(
-    90deg,
+  -webkit-mask-image: -webkit-linear-gradient(
+    left,
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 0) 50%,
     rgba(0, 0, 0, 1) 50%,
@@ -319,9 +392,29 @@ svg {
   left: 0;
   bottom: 0;
   width: 50%;
-  animation: pulseGlow 5s linear infinite alternate;
+  -webkit-animation: pulseGlow 5s linear infinite alternate;
+          animation: pulseGlow 5s linear infinite alternate;
   background-position: 100% 50%;
   background-repeat: no-repeat;
+  background-image: -webkit-radial-gradient(
+    100% 50% at 100% 50%,
+    rgba(60, 26, 229, 0.25) 0%,
+    rgba(60, 26, 229, 0.247904) 11.79%,
+    rgba(59, 26, 229, 0.241896) 21.38%,
+    rgba(58, 26, 229, 0.2324) 29.12%,
+    rgba(57, 26, 229, 0.219837) 35.34%,
+    rgba(55, 26, 229, 0.20463) 40.37%,
+    rgba(53, 26, 229, 0.1872) 44.56%,
+    rgba(51, 26, 229, 0.16797) 48.24%,
+    rgba(48, 26, 229, 0.147363) 51.76%,
+    rgba(46, 26, 229, 0.1258) 55.44%,
+    rgba(44, 26, 229, 0.103704) 59.63%,
+    rgba(41, 26, 229, 0.0814963) 64.66%,
+    rgba(39, 26, 229, 0.0596) 70.88%,
+    rgba(36, 26, 229, 0.038437) 78.62%,
+    rgba(34, 26, 229, 0.0184296) 88.21%,
+    rgba(32, 26, 229, 0) 100%
+  );
   background-image: radial-gradient(
     100% 50% at 100% 50%,
     rgba(60, 26, 229, 0.25) 0%,
@@ -349,6 +442,12 @@ svg {
   height: 100%;
   right: 0;
   display: block;
+  background-image: -webkit-linear-gradient(
+    top,
+    rgba(60, 26, 229, 0) 0%,
+    #3c1ae5 50%,
+    rgba(60, 26, 229, 0) 100%
+  );
   background-image: linear-gradient(
     180deg,
     rgba(60, 26, 229, 0) 0%,
@@ -390,12 +489,25 @@ svg {
 
 /* ... Kode sebelumnya ... */
 
-@keyframes scroll {
+@-webkit-keyframes scroll {
   0% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
   100% {
-    transform: translateX(calc(-850px * 7));
+    -webkit-transform: translateX(calc(-850px * 7));
+            transform: translateX(calc(-850px * 7));
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-850px * 7));
+            transform: translateX(calc(-850px * 7));
   }
 }
 
@@ -410,8 +522,13 @@ svg {
   margin-bottom: 40px;
 }
 
-.slider::before,
-.slider::after {
+.slider:before,
+.slider:after {
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0.342) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
   background: linear-gradient(
     to right,
     rgba(255, 255, 255, 0.342) 0%,
@@ -424,19 +541,23 @@ svg {
   z-index: 2;
 }
 
-.slider::after {
+.slider:after {
   right: 0;
   top: 0;
-  transform: rotateZ(180deg);
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
 }
 
-.slider::before {
+.slider:before {
   left: 0;
   top: 0;
 }
 
 .slider .slide-track {
-  animation: scroll 40s linear infinite;
+  -webkit-animation: scroll 40s linear infinite;
+          animation: scroll 40s linear infinite;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: calc(250px * 14);
 }
@@ -462,9 +583,16 @@ svg {
   .card2 {
     width: 27%;
     padding-bottom: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     padding: 16px 24px;
     gap: 8px;
     background: #ffffff;
@@ -477,7 +605,8 @@ svg {
     font-size: 8px;
     line-height: 10px;
     color: #535062;
-    animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
+    -webkit-animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
+            animation: rotateCCW calc(var(--rotate-speed) * 1s) var(--easing) infinite;
   }
 
   .center-circle {
